--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@ UPLOAD_PASSWORD=abcd5253
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=IAMMURTAZA12
 POSTGRES_DB=loan
-POSTGRES_HOSTNAME=db
+#POSTGRES_HOSTNAME=db
+
+POSTGRES_HOSTNAME=localhost
 POSTGRES_PORT=5432
