--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_HOSTNAME=${POSTGRES_HOSTNAME}
+      - POSTGRES_HOSTNAME=db
       - POSTGRES_PORT=${POSTGRES_PORT}
     ports:
       - "8501:8501"
